--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jspdf": "^2.1.1",
     "jspdf-autotable": "^3.5.13",
     "luxon": "^1.24.1",
+    "material-design-icons": "^3.0.1",
     "mdbreact": "^4.27.0",
     "moment": "^2.27.0",
     "react": "^16.14.0",
